# traffic-signs-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  data.dvc  docker-compose.yml  mlflow.dockerfile  mlflow.dvc  pyproject.toml
.dvc/: config
detector/: __init__.py  benchmark.py  converters.py  data.py  infer.py  model.py  torch_infer.py  train.py  trt_infer.py  validate.py
detector/configs/: base_config_64.yaml
